# vines_android

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release-tauri-app.yaml
dnas/threads/workdir/: dna.yaml
dnas/threads/zomes/coordinator/profiles/: Cargo.toml
dnas/threads/zomes/coordinator/threads/: Cargo.toml
dnas/threads/zomes/coordinator/threads/src/: lib.rs
dnas/threads/zomes/integrity/profiles_integrity/: Cargo.toml
dnas/threads/zomes/integrity/threads/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: contexts.ts  holochain-app.ts
ui/src/threads/threads/: types.ts
workdir/: happ.yaml  web-happ.yaml
