[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
serde = "1.0"

[workspace.dependencies.threads]
path = "dnas/threads/zomes/coordinator/threads"

[workspace.dependencies.threads_integrity]
path = "dnas/threads/zomes/integrity/threads"
