[workspace]
resolver = "2"
members = [
    "dnas/*/zomes/coordinator/*",
    "dnas/*/zomes/integrity/*"
    , "src-tauri"
]

[workspace.lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"

[workspace.package]
version = "0.1.0"
rust-version = "1.70.0"
edition = "2021"

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
serde = "1.0"

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-4.0-dev.20" }
zome_signals = { git = "https://github.com/ddd-mtl/zome-signals", branch = "hdk-4.0-dev.20" }
time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-4.0-dev.20" }
path_explorer_types = { git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer_types", branch = "hdk-4.0-dev.20" }
path_explorer = { git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer", branch = "hdk-4.0-dev.20" }

threads = {path = "dnas/threads/zomes/coordinator/threads"}
threads_integrity = {path = "dnas/threads/zomes/integrity/threads"}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
